fixed minor layout issue

--- a/views/stylesheets/site.css.sass
+++ b/views/stylesheets/site.css.sass
@@ -178,7 +178,7 @@ a.big-blue-button
   position: relative
   width: 1024px
   height: $gallery-height
-  margin: 0 auto 10 auto
+  margin: 0 auto
 
   .image-container
     position: relative
@@ -196,6 +196,7 @@ a.big-blue-button
     display: block
     border: 0
     outline: none
+    margin-bottom: 10px
    
   .right-btn, .left-btn
     position: absolute
